# Petya

./: .gitignore  CMakeLists.txt  Entity.hpp  README.md  main.cpp  Шпаргалка по Git.txt
assets/textures/: background.jfif
include/: Ball.hpp  Bonus.hpp  Brick.hpp  CombatBrick.hpp  Entity.hpp  Game.hpp  MagicBrick.hpp  Map.hpp  MapGenerator.hpp  Platform.hpp  PowerfulBrick.hpp  Rocket.hpp  SeriousBrick.hpp  Shield.hpp  SimpleBrick.hpp  utils.hpp
src/: Ball.cpp  Bonus.cpp  Brick.cpp  CombatBrick.cpp  Entity.cpp  Game.cpp  MagicBrick.cpp  Map.cpp  MapGenerator.cpp  Platform.cpp  PowerfulBrick.cpp  Rocket.cpp  SeriousBrick.cpp  Shield.cpp  SimpleBrick.cpp  main.cpp  utils.cpp
